# limtrac

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs  cbindgen.toml
.github/: CODEOWNERS  FUNDING.yml  SECURITY.md
.github/workflows/: default-workflow.yml  devskim.yml
bindings/LimtracDotNet/: LimtracDotNet.sln
bindings/LimtracDotNet/LimtracDotNet/: Constants.cs  Limtrac.cs  LimtracDotNet.csproj  LimtracInterop.cs
bindings/LimtracDotNet/LimtracDotNet.DemoApp/: LimtracDotNet.DemoApp.csproj  Program.cs
bindings/LimtracDotNet/LimtracDotNet/RequestStructs/: ExecProgGuard.cs  ExecProgIO.cs  ExecProgInfo.cs  ExecProgLimits.cs
bindings/LimtracDotNet/LimtracDotNet/ResultStructs/: ProcExecResult.cs  ProcResUsage.cs
bindings/demoapp_c/: CMakeLists.txt  build.sh  main.c  main.h  test.py
examples/demo_c/: main.c  test.py
src/cli/: constants.rs  helpers.rs  main.rs  structures.rs
src/lib/: constants.rs  data_models.rs  helper_functions.rs  lib.rs  request_structs.rs  result_structs.rs  sandboxing_features.rs
