# LIMTRAC, a part of Overtest free software project.
# Copyright (C) 2021-2022, Yurii Kadirov <contact@sirkadirov.com>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as
# published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with this program. If not, see <https://www.gnu.org/licenses/>.

[package]
publish = false
name = "limtrac"
version = "0.2.0"
edition = "2018"
homepage = "https://overtest.github.io/limtrac/"
repository = "https://github.com/overtest/limtrac/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "limtrac"
path = "src/lib/lib.rs"
crate-type = ["cdylib"]

#[[bin]]
#name = "limtrac"
#path = "src/cli/main.rs"

[build-dependencies]
cbindgen = "0.20.0"

[dependencies]
nix = "0.23.1"
libc = "0.2.112"
syscallz = "0.16.1"
cgroups-rs = "0.2.8"
#nanoid = "0.4.0" # Currently, not in use