# LIMTRAC, a part of Overtest free software project.
# Copyright (C) 2021-2023, Yurii Kadirov <contact@sirkadirov.com>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as
# published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with this program. If not, see <https://www.gnu.org/licenses/>.

[package]
publish = false
name = "limtrac"
version = "0.3.0"
edition = "2021"
homepage = "https://overtest.github.io/limtrac/"
repository = "https://github.com/overtest/limtrac/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "limtrac"
path = "src/lib/lib.rs"
crate-type = ["cdylib"]

#[[bin]]
#name = "limtrac"
#path = "src/cli/main.rs"

[build-dependencies]
cbindgen = "0.24.3"

[dependencies]
libc = "0.2.142"
nix = "0.26.2"
procfs = "0.15.1"
syscallz = "0.16.2"